--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for @todo do |f| %>
   <p> <%= f.text_field :title, class: 'long_txt' %> </p>
-  <p> <%= f.submit "提交", class: 'submit' %> </p>
+  <p> <%= f.submit "Submit", class: 'submit' %> </p>
 <% end %>
